Fixed alignment for sidebar

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -56,9 +56,12 @@
     
     /* Set gray background color and 100% height */
     .sidenav {
-      padding-top: 20px;
+      padding-top: 0px;
+      padding-left: 0px;
+      padding-right: 0px;
       background-color: #f1f1f1;
       height:100%;
+      margin:0px;
     }
 
     /* Set black background color, white text and some padding */
@@ -85,6 +88,11 @@
       padding-left:10px;
 
     }
-
+    .btn-group-vertical{
+      width:100%;
+    }
+    .btn-group-vertical .btn{
+      width:100%;
+    }
 
 
